# Healthy-Habits-Tracker-SPA-

./: .env.sample  .flake8  README.md  dump.rdb  pyproject.toml
accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
accounts/management/commands/: csu.py
accounts/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
config/: celery.py  settings.py  shadow.py  urls.py
habits/: admin.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_place_alter_habit_time.py
